--- a/Aplikacija/KonacniProjekat/Pages/TuraKomentari.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraKomentari.cshtml
@@ -9,7 +9,7 @@
 
 <nav aria-label="Page navigation">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" asp-page="./TuraSve">Prikazi listu tura</a></li>
+    <li class="page-item"><a class="page-link" asp-page="./TuraJedna" asp-route-id="@Model.Tura.IdTure"><i class='fas fa-arrow-circle-left'></i>Vrati se na prikaz ture</a></li>
   </ul>
 </nav>
 
