--- a/Aplikacija/KonacniProjekat/Pages/VodicDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicDodaj.cshtml
@@ -5,6 +5,13 @@
 <div class="text-center">
     <h1 class="display-4">Kreiranje naloga - Vodič</h1>
 </div>
+
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" asp-page="./VodicSvi"><i class='fas fa-arrow-circle-left'></i>Prikaži listu vodiča</a></li>
+  </ul>
+</nav>
+
 @if(SessionClass.TipKorisnika=="A"){
 <div class="registracija fadeInDown">
 <div id="formContent">
@@ -25,7 +32,7 @@
           <input type="text" asp-for="NoviKorisnik.Username" placeholder="Korisničko ime" required />
           <input type="text"  asp-for="NoviKorisnik.Password" placeholder="Lozinka" required />
           <input type="file"  asp-for="NoviVodic.Slika" placeholder="Slika" required />
-          <button type="submit" class="dugme">Registruj vodiča <i class="far fa-id-badge"></i></button>
+       <button type="submit">Registruj vodiča <i class="far fa-id-badge"></i></button>
      </form>
      </div>
 </div>
