--- a/Aplikacija/KonacniProjekat/Pages/KvizDodajPitanje.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizDodajPitanje.cshtml
@@ -8,9 +8,11 @@
     <h1 class="display-4">Novo pitanje</h1>
 </div>
 
-<div class="text-left">
-    <h3><a asp-page="./KvizJedan" asp-route-id="@Model.KvizId">Vrati se na prikaz kviza</a></h3>
-</div>
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" asp-page="./KvizJedan" asp-route-id="@Model.KvizId"><i class='fas fa-arrow-circle-left'>Vrati se na prikaz kviza</a></li>
+  </ul>
+</nav>
 
 <form method="post">
     <div class="dodaj" >
@@ -27,7 +29,7 @@
                                                                             <option value="3">C</option>
                                                                             <option value="" selected disabled hidden>Izaberite koji odgovor je tačan.</option>
                                                                         </select>
-           <button type="submit" class="dugme">Dodaj pitanje</button>
+           <button type="submit">Dodaj pitanje</button>
         </div>
     </div>
 </form>
