--- a/Aplikacija/KonacniProjekat/Pages/KvizJedan.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizJedan.cshtml
@@ -8,13 +8,24 @@
     <h1 class="display-4">@Model.OvajKviz.NazivKviza</h1>
 </div>
 
-<div class="text-right">
-    <h2><a asp-page="./KvizDodajPitanje" asp-route-id="@Model.OvajKviz.IdKviza">Dodaj pitanje u kviz</a></h2>
-</div>
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" asp-page="./KvizSvi"><i class='fas fa-arrow-circle-left'></i>Prikaži listu kvizova</a></li>
+  @if (SessionClass.TipKorisnika == "A")
+    {
+  <li class="page-item">
+    <a class="page-link" asp-page="./KvizIzmeni" asp-route-id="@Model.OvajKviz.IdKviza">Izmeni kviz</a>
+  </li>
+  <li class="page-item">
+    <a class="page-link" asp-page="./KvizDodajPitanje" asp-route-id="@Model.OvajKviz.IdKviza">Dodaj pitanje u kviz</a> 
+      </li>
+    }                  
+  </ul>
+</nav>
 
-<div class="text-left">
-    <h3><a asp-page="./KvizSvi" >Prikaži listu svih kvizova</a></h3>
-</div>
+
+
+
 
 <div>
     <table class="table table-bordered">
