--- a/Aplikacija/KonacniProjekat/Pages/KvizUradi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizUradi.cshtml
@@ -15,6 +15,12 @@ else
     <div class="text-center">
         <h2 class="display-4">Kviz: @Model.NazivKviza</h2>
     </div>
+
+    <nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" asp-page="./KvizSvi"><i class='fas fa-arrow-circle-left'></i>Prikaži listu kvizova</a></li>
+  </ul>
+</nav>
     
     @{
         string Disabled="";
@@ -105,7 +111,7 @@ else
         </div>
 
         <div>
-            <button type="submit" style=" position: relative; margin-left: 45%;" class="dugme">Završi kviz</button>
+            <button type="submit" style=" position: relative; margin-left: 45%;">Završi kviz</button>
         </div>
     }
     
