--- a/Aplikacija/KonacniProjekat/Pages/RezervacijaJedna.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/RezervacijaJedna.cshtml
@@ -6,7 +6,7 @@ ViewData["Title"] = "Rezervacije";
 
 <nav aria-label="Page navigation">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" asp-page="./RezervacijaSve">Prikaži listu svih rezervacija <i class="fas fa-calendar-alt"></i></a></li>
+    <li class="page-item"><a class="page-link" asp-page="./RezervacijaSve"><i class="fas fa-calendar-alt"></i>Prikaži listu svih rezervacija</a></li>
   </ul>
 </nav>
 
