--- a/Aplikacija/KonacniProjekat/Pages/TuraDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraDodaj.cshtml
@@ -4,11 +4,13 @@
     ViewData["Title"]="Nova tura";
 }
 
+
 <nav aria-label="Page navigation">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" asp-page="./TuraSve">Vrati se nazad</a></li>
+    <li class="page-item"><a class="page-link" asp-page="./TuraSve"><i class='fas fa-arrow-circle-left'></i>Prikaži listu tura</a></li>
   </ul>
 </nav>
+
 @if(SessionClass.TipKorisnika == "A" || SessionClass.TipKorisnika == "T")
 {
   
@@ -75,13 +77,13 @@
          
         @if (SessionClass.TipKorisnika == "A")
         {
-          <button type="submit" asp-page-handler="Tura" class="dugme">
+          <button type="submit" asp-page-handler="Tura">
             Dodaj novu turu
           </button>
         }
         else
         {
-          <button type="submit" asp-page-handler="Rezervacija" class="dugme">
+          <button type="submit" asp-page-handler="Rezervacija">
             Kreiraj custom rezervaciju
           </button>
         }
