--- a/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
@@ -8,11 +8,9 @@
     <h2 class="display-4">Izmena ture: @Model.OvaTura.NazivTure</h2>
 </div>
 
-<i class='fas fa-arrow-circle-left'></i><a asp-page="./TuraSve" style="color:#84c1ff;">Lista tura</a>
-
 <nav aria-label="Page navigation">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" asp-page="./TuraSve">Prikazi listu tura</a></li>
+    <li class="page-item"><a class="page-link" asp-page="./TuraJedna" asp-route-id="@Model.OvaTura.IdTure"><i class='fas fa-arrow-circle-left'></i>Vrati se na prikaz ture</a></li>
   </ul>
 </nav>
 
@@ -58,7 +56,7 @@
                                                   
                                                        
     <div>
-        <button type="submit" class="dugme">Sačuvajte izmene</button>
+        <button type="submit">Sačuvajte izmene</button>
     </div>                                              
     </div>
     </div>                                                
