--- a/Aplikacija/KonacniProjekat/Pages/TuraJedna.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraJedna.cshtml
@@ -9,7 +9,29 @@
 
 <nav aria-label="Page navigation">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" asp-page="./TuraSve">Prikazi listu tura</a></li>
+    <li class="page-item"><a class="page-link" asp-page="./TuraSve"><i class='fas fa-arrow-circle-left'></i>Prikaži listu tura</a></li>
+  @if(SessionClass.TipKorisnika=="T")
+  {
+  <li class="page-item">
+    <a class="page-link" asp-page="./TuraRezervisi" asp-route-id="@Model.Tura.IdTure">Rezerviši turu <i class="far fa-calendar-plus"></i></a>
+  </li>
+   <li class="page-item"> 
+    <a class="page-link" asp-page="./TuraOceni" asp-route-id="@Model.Tura.IdTure">Oceni turu <i class="fas fa-star-half-alt"></i></a>             
+  </li>
+  }
+  @if(SessionClass.TipKorisnika=="A")
+{
+  <li class="page-item">
+    <a class="page-link" asp-page="./TuraIzmeni" asp-route-id="@Model.Tura.IdTure">Izmeni turu <i class="fas fa-edit"></i></a>
+  </li>
+  <li class="page-item">
+		<a class="page-link" asp-page="./TuraObrisi"  asp-route-id="@Model.Tura.IdTure">Obriši turu <i class="fas fa-trash-alt"></i></a>
+  </li>              
+ <li class="page-item">               
+    <a class="page-link" asp-page="./TuraKomentari"  asp-route-id="@Model.Tura.IdTure">Prikaži komentare <i class="far fa-comments"></i></a>           
+  </li>
+}
+  
   </ul>
 </nav>
 
