--- a/Aplikacija/KonacniProjekat/Pages/TuraOceni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraOceni.cshtml
@@ -4,10 +4,15 @@
     ViewData["Title"] = "Radi anketu";
 }
 
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" asp-page="./TuraJedna" asp-route-id="@Model.OvaTura.IdTure"><i class='fas fa-arrow-circle-left'></i>Vrati se na prikaz ture</a></li>
+  </ul>
+</nav>
+
 <div class="text-center">
     <h1 class="=display-4">Anketa za turu: @Model.OvaTura.NazivTure</h1>
 </div>
- <i class='fas fa-arrow-circle-left'></i><a asp-page="./TuraSve" style="color:#84c1ff;">Lista tura</a>
 <div class="formaKAK">
 <form method="post">
     <ol type="1">
@@ -71,7 +76,7 @@
     </ol>
 
     <div>
-        <button type="submit" class="dugme">Oceni turu</button>
+        <button type="submit">Oceni turu</button>
     </div>
 </form>
 </div>
