--- a/Aplikacija/KonacniProjekat/Pages/VodicJedan.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicJedan.cshtml
@@ -3,20 +3,26 @@
 @{
 }
 
-<div>
- <i class='fas fa-arrow-circle-left'></i><a asp-page="./VodicSvi" style="color:#84c1ff;">Lista vodiča</a>
-</div>
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" asp-page="./VodicSvi"><i class='fas fa-arrow-circle-left'></i>Prikaži listu vodiča</a></li>
+  @if(SessionClass.TipKorisnika=="A")
+      {
+  <li class="page-item">
+        <a class="page-link" asp-page="./VodicObrisi"  asp-route-id="@Model.TrenutniVodic.IdVodica">Obriši nalog vodiču <i class='fas fa-user-alt-slash'></i></a> 
+  </li>
+  <li class="page-item">
+        <a class="page-link" asp-page="./VodicIzmeni" asp-route-id="@Model.TrenutniVodic.IdVodica">Izmeni nalog vodiču <i class="fas fa-user-edit"></i></a>
+  </li>
+  }
+  </ul>
+</nav>
 
 <form method="get">
 <div class="cardVodic" style="text-align: center ">
   <img src="images/@Model.TrenutniVodic.Slika" style="width:50%;height:45%; display: block; margin-left: auto; margin-right: auto;">
   <h1>@Model.TrenutniVodic.ImeVodica @Model.TrenutniVodic.PrezimeVodica</h1>
    </br>
-   @if(SessionClass.TipKorisnika=="A")
-   {
-     <p class="title"> <i class="fas fa-birthday-cake"></i> Datum rođenja: @Model.TrenutniVodic.DatumRodjenja</p>
-     <p class="title"> <i class="fas fa-male"></i>/<i class="fas fa-female"></i> Pol: @Model.TrenutniVodic.Pol</p>
-   }
   <p class="title"> <img src="https://image.flaticon.com/icons/svg/1/1700.svg" style="width: 20px; height:20px">Licenca: @Model.TrenutniVodic.Licenca</p>
   <p class="title">Ocena: @Model.TrenutniVodic.Ocena <i class="fas fa-hand-holding-heart"></i></p>
   </br>
