--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostDodaj.cshtml
@@ -10,7 +10,7 @@ ViewData["Title"]="Nova znamenitost";
 
 <nav aria-label="Page navigation">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" asp-page="./ZnamenitostSve">Vrati se nazad</a></li>
+    <li class="page-item"><a class="page-link" asp-page="./ZnamenitostSve"><i class='fas fa-arrow-circle-left'></i>Prikaži listu znamenitosti</a></li>
   </ul>
 </nav>
 
@@ -27,7 +27,7 @@ ViewData["Title"]="Nova znamenitost";
         <label class="form-control">Tip:</label> <input asp-for="NovaZnamenitost.Tip" class="form-control" placeholder="Tip" />
         <label class="form-control">Dodajte sliku:</label> <input type="file" asp-for="NovaZnamenitost.Slika"  placeholder="Slika" required />
        
-        <button type="submit" class="dugme">Dodaj novu znamenitost</button>
+        <button type="submit">Dodaj novu znamenitost</button>
         </div>
     </div>
 </form>
