--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostIzmeni.cshtml
@@ -10,7 +10,7 @@ ViewData["Title"]="Izmena znamenitosti";
 
 <nav aria-label="Page navigation">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" asp-page="./ZnamenitostSve">Prikazi listu znamenitosti</a></li>
+    <li class="page-item"><a class="page-link" asp-page="./ZnamenitostJedna" asp-route-id="@Model.TrenutnaZnamenitost.IdZnamenitosti"><i class='fas fa-arrow-circle-left'></i>Vrati se na prikaz znamenitosti</a></li>
   </ul>
 </nav>
 
@@ -28,7 +28,7 @@ ViewData["Title"]="Izmena znamenitosti";
         <label class="form-control">Cena ulaznice:</label> <input asp-for="TrenutnaZnamenitost.CenaUlaznice" class="form-control" />
         <label class="form-control">Tip:</label> <input asp-for="TrenutnaZnamenitost.Tip" class="form-control" />
         <label class="form-control">Naslovna slika:</label> <input asp-for="TrenutnaZnamenitost.Slika" class="form-control" />
-        <button type="submit" class="dugme">Sačuvaj izmene</button>
+        <button type="submit">Sacuvaj izmene</button>
         </div>
     </div>
 </form>
