--- a/Aplikacija/KonacniProjekat/Pages/KvizIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizIzmeni.cshtml
@@ -8,24 +8,24 @@
     <h1 class="display-4">Izmena kviza: @Model.OvajKviz.NazivKviza</h1>
 </div>
 
-<nav aria-label="Page navigation">
-  <ul class="pagination">
-    <li class="page-item"><a class="page-link" asp-page="./KvizJedan" asp-route-id="@Model.KvizId"><i class='fas fa-arrow-circle-left'>Vrati se na prikaz kviza</a></li>
-  </ul>
-</nav>
 
+<nav aria-label="Page navigation">
+	<ul class="pagination">
+		<li class="page-item"><a class="page-link" asp-page="./KvizJedan" asp-route-id="@Model.KvizId"><i class='fas fa-arrow-circle-left'>Vrati se na prikaz kviza</a></li>
+	</ul>
+</nav>
 
 <form method="post">
     <div class="izmeni">
         <div id="formContent">
             <input type="hidden" asp-for="KvizId" />
             <input type="hidden" asp-for="SessionId" />
-            <label class="form-control">Naziv kviza:</label> <input asp-for="OvajKviz.NazivKviza" class="form-control" placeholder="OvajKviz.Naziv kviza" />
-            <label class="form-control">Znamenitost:</label>    <select class="form-control select-fit-text margin-input-izmena" asp-for="IzabranaZnamenitostString" style="display:block;" asp-items="Model.IzborZnamenitostiLista">
+            <label class="form-control">Naziv kviza:</label> <input asp-for="OvajKviz.NazivKviza" class="form-control" placeholder="OvajKviz.Naziv kviza" required/>
+            <label class="form-control">Znamenitost:</label>    <select class="form-control select-fit-text margin-input-izmena" asp-for="IzabranaZnamenitostString" style="display:block;" asp-items="Model.IzborZnamenitostiLista" required>
                                                                     <option value="">Bez znamenitosti</option>
                                                                     <option value="" selected disabled hidden>Izaberite za koju znamenitost je vezan kviz.</option>
                                                                 </select>
-             <label class="form-control">Tura:</label>    <select class="form-control select-fit-text margin-input-izmena" asp-for="IzabranaTuraString" style="display:block;" asp-items="Model.IzborTuraLista">
+             <label class="form-control">Tura:</label>    <select class="form-control select-fit-text margin-input-izmena" asp-for="IzabranaTuraString" style="display:block;" asp-items="Model.IzborTuraLista" required>
                                                                     <option value="">Bez ture</option>
                                                                     <option value="" selected disabled hidden>Izaberite za koju turu je vezan kviz.</option>
                                                                 </select>
