--- a/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
@@ -8,9 +8,10 @@
     <h2 class="display-4">Izmena ture: @Model.OvaTura.NazivTure</h2>
 </div>
 
+
 <nav aria-label="Page navigation">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" asp-page="./TuraJedna" asp-route-id="@Model.OvaTura.IdTure"><i class='fas fa-arrow-circle-left'></i>Vrati se na prikaz ture</a></li>
+        <li class="page-item"><a class="page-link" asp-page="./TuraJedna" asp-route-id="@Model.OvaTura.IdTure"><i class='fas fa-arrow-circle-left'></i>Vrati se na prikaz ture</a></li>
   </ul>
 </nav>
 
@@ -19,8 +20,11 @@
 <form method="post">
     <div class="izmeni">
     <div id="formContent">
-    <label class="form-control">Naziv ture:</label> <input asp-for="OvaTura.NazivTure" class="form-control margin-input-izmena" />
-    <label class="form-control">Dan održavanja:</label> 
+        <input type="hidden" asp-for="@Model.TuraId" />
+        <input type="hidden" asp-for="@Model.DaniOdrzavanjaPreIzmene" />
+    <label class="form-control">Naziv ture:</label> <input asp-for="OvaTura.NazivTure" class="form-control margin-input-izmena" required />
+    <label class="form-control select-fit-text"><b>Trenutno se tura održava danima: @Model.VecIzabraniDaniString</b></label>
+    <label class="form-control select-fit-text">Izaberite <b>sve</b> dane održavanja ove ture:</label> 
         <div class="forma-check"><input type="checkbox" name="IzabraniDani[]" value="1" /> <h6>Ponedeljak</h6> </div>
         <div class="forma-check"><input type="checkbox" name="IzabraniDani[]" value="2" /> <h6>Utorak</h6> </div>
         <div class="forma-check"><input type="checkbox" name="IzabraniDani[]" value="3" /> <h6>Sreda</h6> </div>
@@ -38,7 +42,7 @@
     <label class="form-control">Kapacitet:</label>    
         <input type="number" class="form-control margin-input-izmena" min="1" max="100" asp-for="OvaTura.Kapacitet" required/>
 
-    <label class="form-control">Vodič:</label>
+    <label class="form-control select-fit-text">Vodič ove ture:</label>
         <select class="form-control select-fit-text margin-input-izmena" id="izborVodicaIzmena" asp-for="@Model.IzabraniVodic" asp-items="@Model.SviVodici" required>
             <option value="" selected disabled hidden>Izaberite vodiča koji će voditi turu.</option>
         </select>
@@ -46,14 +50,31 @@
     <label class="form-control">Opis</label> 
         <textarea class="form-control text-area-fit" asp-for="OvaTura.Opis"> </textarea> 
 
-    <label class="form-control">Znamenitosti:</label> 
-        @foreach (var znamenitost in Model.SveZnamenitostiLista)
+    <div><label class="form-control select-fit-text"><b>Znamenitosti koje su već u ovoj turi: @Model.VecZnamenitostiUOvojTuriString</b></label></div>
+    
+    <div>@if (Model.VecZnamenitostiUOvojTuri.Count() != 0)
         {
-            <div class="forma-check">
-                <input type="checkbox" name="IzabraneZnamenitosti[]" value="@znamenitost.IdZnamenitosti" /> <h6>@znamenitost.NazivZnamenitosti</h6>
-            </div>
-        }                                                      
-                                                  
+            <label class="form-control select-fit-text">Izaberite koje od ovih znamenitosti želite da uklonite iz ove ture</label> 
+            @foreach (var znamenitost in Model.VecZnamenitostiUOvojTuri)
+            {
+                <div class="forma-check">
+                    <input type="checkbox" name="ZnamenitostiZaUklanjanje[]" value="@znamenitost.IdZnamenitosti" /> <h6>@znamenitost.NazivZnamenitosti</h6>
+                </div>
+            }
+        }
+    </div>
+    <div>
+        @if (Model.ZnamenitostiKojeNisuUTuri.Count() != 0)
+        {
+            <label class="form-control select-fit-text">Izaberite koje od ovih znamenitosti želite da dodate u ovu turu</label>
+            @foreach (var znamenitost in Model.ZnamenitostiKojeNisuUTuri)
+            {
+                <div class="forma-check">
+                    <input type="checkbox" name="IzabraneZnamenitosti[]" value="@znamenitost.IdZnamenitosti" /> <h6>@znamenitost.NazivZnamenitosti</h6>
+                </div>
+            }  
+        }
+    </div>           
                                                        
     <div>
         <button type="submit">Sačuvajte izmene</button>
@@ -63,5 +84,5 @@
 </form>
 }
 else{
-  <div class="alert alert-danger" role="alert" style="text-align: center;"><i class="fas fa-exclamation-triangle"></i> Nemate pristup ovoj stranici, samo admin može da izmeni turu. <i class="fas fa-exclamation-triangle"></i></div> 
+  <div class="alert alert-danger" role="alert" style="text-align: center;">Nemate pristup ovoj stranici, samo admin može da izmeni turu</div> 
 }
