--- a/Aplikacija/KonacniProjekat/Pages/TuraJedna.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraJedna.cshtml
@@ -10,30 +10,42 @@
 <nav aria-label="Page navigation">
   <ul class="pagination">
     <li class="page-item"><a class="page-link" asp-page="./TuraSve"><i class='fas fa-arrow-circle-left'></i>Prikaži listu tura</a></li>
-  @if(SessionClass.TipKorisnika=="T")
+  @if(SessionClass.TipKorisnika=="T" && !Model.NeispravnaTura)
   {
-  <li class="page-item">
-    <a class="page-link" asp-page="./TuraRezervisi" asp-route-id="@Model.Tura.IdTure">Rezerviši turu <i class="far fa-calendar-plus"></i></a>
-  </li>
-   <li class="page-item"> 
-    <a class="page-link" asp-page="./TuraOceni" asp-route-id="@Model.Tura.IdTure">Oceni turu <i class="fas fa-star-half-alt"></i></a>             
-  </li>
+    <li class="page-item">
+      <a class="page-link" asp-page="./TuraRezervisi" asp-route-id="@Model.Tura.IdTure">Rezerviši turu <i class="far fa-calendar-plus"></i></a>
+    </li>
+     <li class="page-item"> 
+      <a class="page-link" asp-page="./TuraOceni" asp-route-id="@Model.Tura.IdTure">Oceni turu <i class="fas fa-star-half-alt"></i></a>             
+    </li>
   }
+
   @if(SessionClass.TipKorisnika=="A")
-{
-  <li class="page-item">
-    <a class="page-link" asp-page="./TuraIzmeni" asp-route-id="@Model.Tura.IdTure">Izmeni turu <i class="fas fa-edit"></i></a>
-  </li>
-  <li class="page-item">
-		<a class="page-link" asp-page="./TuraObrisi"  asp-route-id="@Model.Tura.IdTure">Obriši turu <i class="fas fa-trash-alt"></i></a>
-  </li>              
- <li class="page-item">               
-    <a class="page-link" asp-page="./TuraKomentari"  asp-route-id="@Model.Tura.IdTure">Prikaži komentare <i class="far fa-comments"></i></a>           
-  </li>
-}
-  
+  {
+    <li class="page-item">
+      <a class="page-link" asp-page="./TuraIzmeni" asp-route-id="@Model.Tura.IdTure">Izmeni turu <i class="fas fa-edit"></i></a>
+    </li>
+    <li class="page-item">
+		  <a class="page-link" asp-page="./TuraObrisi"  asp-route-id="@Model.Tura.IdTure">Obriši turu <i class="fas fa-trash-alt"></i></a>
+    </li>              
+    <li class="page-item">               
+      <a class="page-link" asp-page="./TuraKomentari"  asp-route-id="@Model.Tura.IdTure">Prikaži komentare <i class="far fa-comments"></i></a>           
+    </li>
+  }
+
   </ul>
 </nav>
+
+@if (SessionClass.TipKorisnika == "T" && Model.NeispravnaTura)
+{ 
+  <div class="alert alert-danger" role="alert" style="text-align: center;"><i class="fas fa-exclamation-triangle"></i>Ova tura je trenutno nepotpuna.<i class="fas fa-exclamation-triangle"></i></div>  
+}
+else if (SessionClass.TipKorisnika == "A" && Model.NeispravnaTura)
+{
+    
+  <div class="alert alert-danger" role="alert" style="text-align: center;"><i class="fas fa-exclamation-triangle"></i>Ova tura trenutno nema postavljenog vodiča ili dane održavanja. Izmenite turu tako da budu postavljeni i dani održavanja i vodič.<i class="fas fa-exclamation-triangle"></i></div> 
+}
+
 
   @* <div class="row"> *@
 <div class="card shadow mb-4 ">
@@ -50,7 +62,14 @@
         <div class="vrednost-rezAnk">@Model.Tura.NazivTure</div>
                   
         <div class="naziv-rezAnk">Dani održavanja</div>
-        <div class="vrednost-rezAnk">@Model.DaniOdrzavanja</div>
+        @if (Model.DaniOdrzavanja != "")
+        {
+          <div class="vrednost-rezAnk">@Model.DaniOdrzavanja</div>
+        }
+        else
+        {
+          <div class="vrednost-rezAnk">Trenutno nema dane održavanja.</div>
+        }
 
         <div class="naziv-rezAnk">Vreme održavanja</div>
         <div class="vrednost-rezAnk">@Model.Tura.VremeOdrzavanja</div>
@@ -63,14 +82,29 @@
 
         <div class="naziv-rezAnk">Vodič</div>
 
-        <div class="vrednost-rezAnk">
-          <a asp-page="./VodicJedan" asp-route-id="@Model.VodicTure.IdVodica"> @Model.VodicTure.ImeVodica @Model.VodicTure.PrezimeVodica</a>
-        </div>
+        @if (Model.VodicTure != null)
+        {
+          <div class="vrednost-rezAnk">
+            <a asp-page="./VodicJedan" asp-route-id="@Model.VodicTure.IdVodica"> @Model.VodicTure.ImeVodica @Model.VodicTure.PrezimeVodica</a>
+          </div>
+        }
+        else
+        {
+          <div class="vrednost-rezAnk">Trenutno nema vodiča.</div>
+        }
+        
 
         <div class="naziv-rezAnk">Znamenitosti</div>
-        @foreach (var znamenitost in @Model.ZnamenitostiUTuri)
+        @if (Model.ZnamenitostiUTuri != null && Model.ZnamenitostiUTuri.Count() != 0)
         {
-        <div class="vrednost-rezAnk">@znamenitost.NazivZnamenitosti</div>      
+          @foreach (var znamenitost in @Model.ZnamenitostiUTuri)
+          {
+            <div class="vrednost-rezAnk">@znamenitost.NazivZnamenitosti</div>      
+          }
+        }
+        else
+        {
+          <div class="vrednost-rezAnk">Trenutno nema znamenitosti.</div> 
         }
       
       </div>
