--- a/Aplikacija/KonacniProjekat/Pages/TuraRezervisi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraRezervisi.cshtml
@@ -44,7 +44,7 @@
     </div>
 }
 else{
-        <div class="alert alert-danger" role="alert" style="text-align: center;"><i class="fas fa-exclamation-triangle"></i> Ova tura još uvek nema dodate dane održavanja. Možete rezervisati neku od drugih tura. <i class="fas fa-exclamation-triangle"></i></div>   
+        <div class="alert alert-danger" role="alert" style="text-align: center;"><i class="fas fa-exclamation-triangle"></i> Ova tura još uvek nema dodate dane održavanja ili vodiča. Možete rezervisati neku od drugih tura. <i class="fas fa-exclamation-triangle"></i></div>   
 }
 
 
