--- a/Aplikacija/KonacniProjekat/Pages/KvizIzmeniPitanje.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizIzmeniPitanje.cshtml
@@ -13,24 +13,30 @@
     <li class="page-item"><a class="page-link" asp-page="./KvizJedan" asp-route-id="@Model.KvizId">Vrati se na prikaz kviza</a></li>
   </ul>
 </nav>
+@if(SessionClass.TipKorisnika == "A")
+{
+    <form method=post>
+        <div class="izmeni">
+            <div id="formContent">
+                <input type="hidden" asp-for="KvizId" />
+                <input type="hidden" asp-for="PitanjeId" />
+                <label class="form-control select-fit-text">Unesite novo pitanje:</label> <input asp-for="OvoPitanje.TekstPitanja" value="@Model.OvoPitanje.TekstPitanja" placeholder="@Model.OvoPitanje.TekstPitanja" />
+                <label class="form-control">Odgovor A:</label> <input asp-for="OvoPitanje.OdgovorA" value="@Model.OvoPitanje.OdgovorA" placeholder="@Model.OvoPitanje.OdgovorA" />
+                <label class="form-control">Odgovor B:</label> <input asp-for="OvoPitanje.OdgovorB" value="@Model.OvoPitanje.OdgovorB" placeholder="@Model.OvoPitanje.OdgovorB" />
+                <label class="form-control">Odgovor C:</label> <input asp-for="OvoPitanje.OdgovorC" value="@Model.OvoPitanje.OdgovorC" placeholder="@Model.OvoPitanje.OdgovorC" />
+                <label class="form-control select-fit-text">Tačan odgovor je pod:</label>   <select class="form-control select-fit-text margin-input-izmena" asp-for="IzborTacnogOdgovoraInt" required>
+                                                                                                    <option value="" selected disabled hidden>Izaberite koji odgovor je tačan.</option>
+                                                                                                    <option value="1">A</option>
+                                                                                                    <option value="2">B</option>
+                                                                                                    <option value="3">C</option>
 
-<form method=post>
-    <div class="izmeni">
-        <div id="formContent">
-            <input type="hidden" asp-for="KvizId" />
-            <input type="hidden" asp-for="PitanjeId" />
-            <label class="form-control select-fit-text">Unesite novo pitanje:</label> <input asp-for="OvoPitanje.TekstPitanja" value="@Model.OvoPitanje.TekstPitanja" placeholder="@Model.OvoPitanje.TekstPitanja" />
-            <label class="form-control">Odgovor A:</label> <input asp-for="OvoPitanje.OdgovorA" value="@Model.OvoPitanje.OdgovorA" placeholder="@Model.OvoPitanje.OdgovorA" />
-            <label class="form-control">Odgovor B:</label> <input asp-for="OvoPitanje.OdgovorB" value="@Model.OvoPitanje.OdgovorB" placeholder="@Model.OvoPitanje.OdgovorB" />
-            <label class="form-control">Odgovor C:</label> <input asp-for="OvoPitanje.OdgovorC" value="@Model.OvoPitanje.OdgovorC" placeholder="@Model.OvoPitanje.OdgovorC" />
-            <label class="form-control select-fit-text">Tačan odgovor je pod:</label>   <select class="form-control select-fit-text margin-input-izmena" asp-for="IzborTacnogOdgovoraInt" required>
-                                                                                                <option value="" selected disabled hidden>Izaberite koji odgovor je tačan.</option>
-                                                                                                <option value="1">A</option>
-                                                                                                <option value="2">B</option>
-                                                                                                <option value="3">C</option>
-                                                                                                
-                                                                                            </select>
-            <button type="submit" class="dugme">Izmeni pitanje</button>
-        </div>
-    </div>
-</form>
+                                                                                                </select>
+                <button type="submit" class="dugme">Izmeni pitanje</button>
+            </div>
+      </div>
+    </form>
+}
+else
+{
+  <div class="alert alert-danger" role="alert" style="text-align: center;"><i class="fas fa-exclamation-triangle"></i> Nemate pristup ovoj stranici, samo admin može da izmeni pitanje. <i class="fas fa-exclamation-triangle"></i></div>   
+}
