--- a/Aplikacija/KonacniProjekat/Pages/VodicDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicDodaj.cshtml
@@ -32,7 +32,7 @@
           <input type="text" asp-for="NoviKorisnik.Username" placeholder="Korisničko ime" required />
           <input type="text"  asp-for="NoviKorisnik.Password" placeholder="Lozinka" required />
           <input type="file"  asp-for="NoviVodic.Slika" placeholder="Slika" required />
-       <button type="submit">Registruj vodiča <i class="far fa-id-badge"></i></button>
+       <button type="submit" class="dugme">Registruj vodiča <i class="far fa-id-badge"></i></button>
      </form>
      </div>
 </div>
