--- a/Aplikacija/KonacniProjekat/Pages/VodicSvi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicSvi.cshtml
@@ -5,7 +5,7 @@
 
 <form method="get">
 <div class="text-center">
-    <h1 class="display-4">Vodici</h1>
+    <h1 class="display-4">Vodiči</h1>
 </div>
 
 @if(SessionClass.TipKorisnika=="A")
